Added yml for book

--- a/config-server/src/main/resources/application.properties
+++ b/config-server/src/main/resources/application.properties
@@ -1,1 +1,1 @@
-spring.cloud.config.server.git.uri=https://github.com/prerak13/SpringMegaApp/blob/master/application.yaml
+spring.cloud.config.server.git.uri=https://github.com/prerak13/SpringMegaApp.git
