--- a/Books/src/main/resources/application.properties
+++ b/Books/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-spring.config.import=optional:configserver:http://localhost:8080/application/book
+spring.config.import=optional:configserver:http://localhost:8080/
+spring.application.name=book
+server.port=8081
