--- a/Books/src/main/resources/bootstrap.properties
+++ b/Books/src/main/resources/bootstrap.properties
@@ -1,4 +1,5 @@
 spring.application.name =book
-spring.config.import = configserver:http://localhost:8081/
+spring.config.uri = configserver:http://localhost:8080/
+server.port = 8081
 management.endpoints.web.exposure.include=env
 management.endpoint.env.keys-to-sanitize=password,username
