--- a/Author/src/main/resources/bootstrap.properties
+++ b/Author/src/main/resources/bootstrap.properties
@@ -4,4 +4,4 @@ server.port = 8083
 management.endpoints.web.exposure.include=env
 management.endpoint.env.keys-to-sanitize=password,username
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-
+spring.cloud.config.server.git.uri=https://github.com/prerak13/SpringMegaApp
