Added author properties

--- a/Authors/src/main/resources/application.properties
+++ b/Authors/src/main/resources/application.properties
@@ -1,7 +1,7 @@
+
 spring.application.name =author
-spring.config.uri = optional:configserver:http://localhost:8080/
-server.port = 8083
+spring.config.import=optional:configserver:http://localhost:8888/
+server.port = 8082
 management.endpoints.web.exposure.include=env
 management.endpoint.env.keys-to-sanitize=password,username
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
-spring.cloud.config.server.git.uri=https://github.com/prerak13/SpringMegaApp
