--- a/Books/src/main/resources/application.properties
+++ b/Books/src/main/resources/application.properties
@@ -1,5 +1,6 @@
 spring.application.name =book
-spring.config.uri = configserver:http://localhost:8080/
+spring.config.import=configserver:http://localhost:8888/
 server.port = 8081
 management.endpoints.web.exposure.include=env
 management.endpoint.env.keys-to-sanitize=password,username
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
