Eureka and Config server implementation  compleated

--- a/Authors/src/main/resources/application.properties
+++ b/Authors/src/main/resources/application.properties
@@ -1,7 +1,11 @@
 
-spring.application.name =author
-spring.config.import=optional:configserver:http://localhost:8888/
+spring.application.name = author
 server.port = 8082
+spring.config.import=optional:configserver:http://localhost:8888/
+
 management.endpoints.web.exposure.include=env
 management.endpoint.env.keys-to-sanitize=password,username
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+eureka.client.registerWithEureka = true
+eureka.client.fetchRegistry = true
+eureka.server.enableSelfPreservation=true
