--- a/book.yml
+++ b/book.yml
@@ -1,16 +1,9 @@
 server:
   port : 8081
 book-test: book-test
-books:
-  -
-    name: b1
-    id: b1
-    author: a1
-  -
-    name: b2
-    id: b2
-    author: a2
-  -
-    name: b3
-    id: b3
-    author: a3
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8889/eureka
+
+
